--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
 
 h1 {
 	color: gold;
-	font-family: webdings;
+	font-family: times;
 
 }
 
@@ -15,7 +15,7 @@ h2 {
 .p1 {
 	color: black;
 	font-family: georgia;
-	font-size: 18px;
+	font-size: 16px;
 }
 
 .jumbotron {
